--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,10 @@ body {
 /* Navbar */
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-betwen;
   align-items: center;
   padding: 1.2rem 9%;
-  background-color: rgba(77, 74, 74, 0.9);
+  background-color: rgba(77, 74, 74, 0.507);
   border-bottom: 1px solid #293444;
   position: fixed;
   top: 0;
@@ -43,7 +43,6 @@ body {
   font-weight: 700;
   color: rgb(211, 201, 56);
   flex: auto;
-  margin-top: -9px;
 }
 
 .navbar .navbar-logo span {
@@ -63,7 +62,6 @@ body {
 .navbar .navbar-nav a::after {
   content: "";
   display: block;
-  padding-bottom: 0.5rem;
   border-bottom: 0.1rem solid rgb(255, 136, 0);
   transform: scaleX(0);
 }
@@ -99,6 +97,15 @@ body {
 /* End Navbar */
 
 /* Hero Section */
+.hero .mask-container {
+  position: absolute;
+  /* background: red; */
+  inset: 0px;
+  -webkit-mask-image: url(../img/burger55.png);
+  -webkit-mask-repeat: repeat;
+  -webkit-mask-size: cover;
+  -webkit-mask-position: center;
+}
 .hero {
   min-height: 100vh;
   display: flex;
@@ -108,8 +115,13 @@ body {
   background-size: cover;
   background-position: center;
   position: relative;
+  mask-image: linear-gradient(rgb(255, 255, 255) 85%, rgba(0, 0, 0, 0.068));
+  -webkit-mask-image: linear-gradient(
+    rgb(184, 184, 184) 85%,
+    rgba(43, 41, 41, 0)
+  );
 }
-.hero::after {
+/* .hero::after {
   content: "";
   display: block;
   position: absolute;
@@ -121,11 +133,15 @@ body {
     rgba(1, 1, 3) 10%,
     rgba(255, 255, 255, -0) 59%
   );
-}
+} */
 .hero .content {
-  padding: 1.4rem 7%;
-  max-width: 60rem;
+  padding: 1.4rem 2%;
+  /* max-width: 60rem; */
+  width: 100%;
+  text-align: center;
   margin-top: 0.5rem;
+  position: fixed;
+  top: 100px;
 }
 .hero .content h1 {
   font-size: 5em;
@@ -144,8 +160,9 @@ body {
   margin-top: 1rem;
   line-height: 1.5;
 }
-.hero .content .abc {
+.abc {
   margin-top: 3rem;
+
   display: flex;
   align-items: center;
   padding: 1rem 3rem;
@@ -155,7 +172,7 @@ body {
   border-radius: 0.8rem;
   box-shadow: 1px 1px 1px rgba(24, 22, 22, 0.9);
   position: absolute;
-  left: 18rem;
+  left: 50rem;
 }
 /* End Hero Section */
 
@@ -191,6 +208,10 @@ body {
 .about .row .about-img img {
   width: 100%;
   border-radius: 20px;
+  -webkit-mask-image: url(../img/menuburger/hamburger-z.svg);
+  -webkit-mask-size: cover;
+  -webkit-mask-repeat: repeat;
+  -webkit-mask-position: center;
 }
 .about .row .content {
   flex: 1 1 35rem;
@@ -258,6 +279,10 @@ body {
 .menu .row .menu-card img {
   border-radius: 20%;
   padding: 3rem;
+  -webkit-mask-image: url(../img/menuburger/humberger3.svg);
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: 94%;
+  -webkit-mask-position: center;
 }
 .menu .row .menu-card .menu-card-title {
   margin: 1rem auto 1.3rem;
